# nix-kunai

./: Cargo.toml  README.md  flake.nix  package.nix  shell.nix
src/: logging.rs  main.rs  source.rs  updater.rs
src/subcommands/: add.rs  delete.rs  edit.rs  init.rs  update.rs
