[package]
name = "nix-kunai"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4"
env_logger = "0.11"
color-print = "0.3"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
